--- a/src/index.html
+++ b/src/index.html
@@ -5,25 +5,272 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     </script>
-    <title>Journal</title>
+    <title>Sudoku</title>
   </head>
   <body>
     <div class="container">
+      <h1>Sudoku</h1>
       <div class="row">
         <div class="well col-xs-6">
           <form id="journal-form">
-            <label for="title">Enter a title:</label>
-            <input id="title" type="text" required>
+            <br>
+            <label for="1"></label>
+            <input id="1" class="red" size="4" required>
 
-            <label for="body">Enter a body:</label>
-            <input id="body" type="text" required>
+            <label for="2"></label>
+            <input id="2" class="red" size="4" required>
 
+            <label for="3"></label>
+            <input id="3" class="red" size="4" required>
+
+            <label for="4"></label>
+            <input id="4" class="blue" size="4" required>
+
+            <label for="5"></label>
+            <input id="5" class="blue" size="4" required>
+
+            <label for="6"></label>
+            <input id="6" class="blue" size="4" required>
+
+            <label for="7"></label>
+            <input id="7" class="red" size="4" required>
+
+            <label for="8"></label>
+            <input id="8" class="red" size="4" required>
+
+            <label for="9"></label>
+            <input id="9" class="red" size="4" required>
+            <br>
+
+            <label for="11"></label>
+            <input id="11" class="red" size="4" required>
+
+            <label for="12"></label>
+            <input id="12" class="red" size="4" required>
+
+            <label for="13"></label>
+            <input id="13" class="red"size="4" required>
+
+            <label for="14"></label>
+            <input id="14" class="blue" size="4" required>
+
+            <label for="15"></label>
+            <input id="15" class="blue" size="4" required>
+
+            <label for="16"></label>
+            <input id="16" class="blue" size="4" required>
+
+            <label for="17"></label>
+            <input id="17" class="red" size="4" required>
+
+            <label for="18"></label>
+            <input id="18" class="red" size="4" required>
+
+            <label for="19"></label>
+            <input id="19" class="red"size="4" required>
+
+            <br>
+            <label for="21"></label>
+            <input id="21" class="red" size="4" required>
+
+            <label for="22"></label>
+            <input id="22" class="red" size="4" required>
+
+            <label for="23"></label>
+            <input id="23" class="red" size="4" required>
+
+            <label for="24"></label>
+            <input id="24" class="blue" size="4" required>
+
+            <label for="25"></label>
+            <input id="25" class="blue" size="4" required>
+
+            <label for="26"></label>
+            <input id="26" class="blue" size="4" required>
+
+            <label for="27"></label>
+            <input id="27" class="red" size="4" required>
+
+            <label for="28"></label>
+            <input id="28" class="red" size="4" required>
+
+            <label for="29"></label>
+            <input id="29" class="red"size="4" required>
+            <br>
+            <label for="31"></label>
+            <input id="31" class="blue" size="4" required>
+
+            <label for="32"></label>
+            <input id="32" class="blue" size="4" required>
+
+            <label for="33"></label>
+            <input id="33" class="blue" size="4" required>
+
+            <label for="34"></label>
+            <input id="34" class="red" size="4" required>
+
+            <label for="35"></label>
+            <input id="35" class="red" size="4" required>
+
+            <label for="36"></label>
+            <input id="36" class="red" size="4" required>
+
+            <label for="37"></label>
+            <input id="37" class="blue" size="4" required>
+
+            <label for="38"></label>
+            <input id="38" class="blue" size="4" required>
+
+            <label for="39"></label>
+            <input id="39" class="blue" size="4" required>
+            <br>
+            <label for="41"></label>
+            <input id="41" class="blue" size="4" required>
+
+            <label for="42"></label>
+            <input id="42" class="blue" size="4" required>
+
+            <label for="43"></label>
+            <input id="43" class="blue" size="4" required>
+
+            <label for="44"></label>
+            <input id="44" class="red"size="4" required>
+
+            <label for="45"></label>
+            <input id="45" class="red" size="4" required>
+
+            <label for="46"></label>
+            <input id="46" class="red" size="4" required>
+
+            <label for="47"></label>
+            <input id="47" class="blue" size="4" required>
+
+            <label for="48"></label>
+            <input id="48" class="blue" size="4" required>
+
+            <label for="49"></label>
+            <input id="49" class="blue" size="4" required>
+            <br>
+            <label for="51"></label>
+            <input id="51" class="blue" size="4" required>
+
+            <label for="52"></label>
+            <input id="52" class="blue" size="4" required>
+
+            <label for="53"></label>
+            <input id="53" class="blue" size="4" required>
+
+            <label for="54"></label>
+            <input id="54" class="red" size="4" required>
+
+            <label for="55"></label>
+            <input id="55" class="red" size="4" required>
+
+            <label for="56"></label>
+            <input id="56" class="red" size="4" required>
+
+            <label for="57"></label>
+            <input id="57" class="blue" size="4" required>
+
+            <label for="58"></label>
+            <input id="58" class="blue" size="4" required>
+
+            <label for="59"></label>
+            <input id="59" class="blue" size="4" required>
+            <br>
+            <label for="61"></label>
+            <input id="61" class="red" size="4" required>
+
+            <label for="62"></label>
+            <input id="62" class="red" size="4" required>
+
+            <label for="63"></label>
+            <input id="63" class="red" size="4" required>
+
+            <label for="64"></label>
+            <input id="64" class="blue" size="4" required>
+
+            <label for="65"></label>
+            <input id="65" class="blue" size="4" required>
+
+            <label for="66"></label>
+            <input id="66" class="blue" size="4" required>
+
+            <label for="67"></label>
+            <input id="67" class="red" size="4" required>
+
+            <label for="68"></label>
+            <input id="68" class="red" size="4" required>
+
+            <label for="69"></label>
+            <input id="69" class="red"size="4" required>
+            <br>
+            <label for="71"></label>
+            <input id="71" class="red" size="4" required>
+
+            <label for="72"></label>
+            <input id="72" class="red" size="4" required>
+
+            <label for="73"></label>
+            <input id="73" class="red" size="4" required>
+
+            <label for="74"></label>
+            <input id="74" class="blue" size="4" required>
+
+            <label for="75"></label>
+            <input id="75" class="blue" size="4" required>
+
+            <label for="76"></label>
+            <input id="76" class="blue" size="4" required>
+
+            <label for="77"></label>
+            <input id="77" class="red"size="4" required>
+
+            <label for="78"></label>
+            <input id="78" class="red" size="4" required>
+
+            <label for="79"></label>
+            <input id="79" class="red" size="4" required>
+            <br>
+            <label for="81"></label>
+            <input id="81" class="red" size="4" required>
+
+            <label for="82"></label>
+            <input id="82" class="red" size="4" required>
+
+            <label for="83"></label>
+            <input id="83" class="red" size="4" required>
+
+            <label for="84"></label>
+            <input id="84" class="blue" size="4" required>
+
+            <label for="85"></label>
+            <input id="85" class="blue" size="4" required>
+
+            <label for="86"></label>
+            <input id="86" class="blue" size="4" required>
+
+            <label for="87"></label>
+            <input id="87" class="red" size="4" required>
+
+            <label for="88"></label>
+            <input id="88" class="red" size="4" required>
+
+            <label for="89"></label>
+            <input id="89" class="red" size="4" required>
+            <br>
+
+            <br>
+            <br>
             <button type="submit">Submit</button>
           </form>
-          <div class="col-xs-6">
-            <h3>Words in the body: <span id="bodyCount"></span></h3>
-            <h3>Vowels in the body: <span id="vowels"></span></h3>
-          </div>
+        </div>
+
+        <div class="col-xs-6">
+          <h2>Your result:</h2>
+          <h3>Column check: <span id="checkColumn"></span></h3>
+          <h3>Row check: <span id="checkRow"></span></h3>
+          <h3>Box check: <span id="checkBox"></span></h3>
         </div>
 
       </div>
